# compass-engine

./: .checkov.yaml  .coderabbit.yaml  .codespellrc  .eslint.config.mjs  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .pylintrc  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUBMODULE_SECURITY.md  biome.json  eslint.config.mjs  greptile.json  package.json  pyproject.toml
.beads/: .gitignore  daemon-error  issues.jsonl
.claude/: settings.json
.claude-trace/: log-2026-02-25-22-31-41.clean.pretty.json  log-2026-02-25-22-31-41.summary.md  log-2026-02-25-22-31-41.tool-calls.md
.github/: CODEOWNERS  README.md  dependabot.yml
.lint/: markdownlint-library.mjs
.serena/: project.yml
docs/: README.md  bmad-agent-inventory.md  bmad-architecture-overview.md  bmad-workflow-maps.md  bmb-workflow-structure.md  bmm-validation-patterns-and-verdicts.md  bmm-workflow-structure.md  📋 Complete BMAD Method Flow.txt
planning/: README.md
plans/: 2026-01-08-bmad-automation-design.md  2026-01-13-bmad-automation-pivot.md  2026-01-15-bmad-automation-completion-plan.md  2026-01-15-bmad-native-automation-plan.md  2026-01-15-bmad-workflow-integration-plan.md  2026-01-15-enhanced-review-loop.md
reference/: README.md  bmad-core-implementation.md  ralph-patterns-analysis.md
scripts/: README.md  build.js  create-bmad-module.js  push.js  update-bmad-method.sh  validate.js
tests/: README.md  conftest.py
tools/: README.md  build.js  check-github-drift.js  check-root-drift.js  create-bmad-module.js  push.js  (+2 more)
(+536 files in other folders)
